# coloring_rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yaml
coloring_cli/: Cargo.toml
coloring_cli/src/: main.rs
coloring_common/: Cargo.toml
coloring_common/src/: lib.rs
coloring_macro/: Cargo.toml
coloring_macro/src/: impls.rs  lib.rs  main.rs
coloring_wasm/: Cargo.toml
coloring_wasm/src/: lib.rs
coloring_web/: Cargo.toml  index.html  next.config.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
coloring_web/src/: App.css  App.tsx  index.css  main.rs  parser.rs
coloring_web/src/components/: InputField.tsx  OutputField.tsx  app.rs  color_selector.rs  mod.rs
coloring_web/src/components/filter/: FilterColumn.tsx  FilterItem.tsx  FilterList.tsx  types.ts
coloring_web/src/components/frags/: ColorSelectDialog.tsx  FragmentColumn.tsx  FragmentItem.tsx  FragmentList.tsx  types.ts
coloring_web/src/pages/: index.tsx
coloring_web/src/styles/: highlight.css
old_coloring_web/: package-lock.json  package.json
old_coloring_web/src/components/: InputField.tsx  OutputField.tsx
old_coloring_web/src/components/filter/: FilterColumn.tsx  FilterItem.tsx  FilterList.tsx  types.ts
old_coloring_web/src/components/frags/: types.ts
old_coloring_web/src/pages/: _document.tsx  index.tsx
