[workspace]
members = ["coloring_cli", "coloring_common", "coloring_macro", "coloring_web"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
dialoguer = "0.11.0"
syn = { version = "2.0.90", features = ["full", "extra-traits", "visit"] }
proc-macro2 = { version = "1.0.92", features = ["span-locations"] }
quote = "1.0.37"
console = "0.15.8"
