[package]
name = "coloring_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
console = { workspace = true }
coloring_macro = { path = "../coloring_macro" }
coloring_common = { path = "../coloring_common" }
